# lucid

./: CMakeLists.txt  README.md
doc/: LUCID-spec-v0.3.md  PHASE2_PARSER_PLAN.md  PHASE3_COMPLETION_REPORT.md  PHASE3_TYPE_CHECKER_PLAN.md  PHASE4_CODEGEN_PLAN.md  PHASE5_COMPLETION_REPORT.md  PHASE5_VM_PLAN.md  PHASE6_STDLIB_PLAN.md  PHASE7_FILE_IO_PLAN.md
examples/: arithmetic.lucid  complex.lucid  conditionals.lucid  fibonacci.lucid  hello.lucid  lambdas.lucid  lists.lucid
include/lucid/backend/: bytecode.hpp  compiler.hpp  value.hpp  vm.hpp
include/lucid/frontend/: ast.hpp  ast_printer.hpp  lexer.hpp  parser.hpp  token.hpp
include/lucid/semantic/: symbol_table.hpp  type_checker.hpp  type_system.hpp
src/: main.cpp
src/backend/: bytecode.cpp  compiler.cpp  value.cpp  vm.cpp
src/frontend/: ast.cpp  ast_printer.cpp  lexer.cpp  parser.cpp
src/semantic/: symbol_table.cpp  type_checker.cpp  type_system.cpp
tests/: compiler_test.cpp  lexer_test.cpp  parser_test.cpp  symbol_table_test.cpp  type_checker_test.cpp  type_system_test.cpp  vm_test.cpp
